# undercat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  tests.py
.github/workflows/: workflow.yml
undercat/: __init__.py
