[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "undercat"
dynamic = ["version"]
description = "Library implementing the covariant Hom (AKA \"Reader\") functor."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Jeremy Silver", email = "jeremys@nessiness.com" }
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["undercat"]
exclude = [".venv", "TODO.md"]

[tool.hatch.version]
path = "undercat/__init__.py"

[tool.commitizen]
tag_format = "v$major.$minor.$patch"

[tool.coverage.run]
source_pkgs = ["undercat"]
branch = true
parallel = true
omit = ["venv/*"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
exclude = ["tmp.*"]
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = "tests"
strict = false
disable_error_code = ["arg-type", "attr-defined", "no-untyped-call", "no-untyped-def", "var-annotated"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests.py"]
addopts = "--verbose --durations=10 --cov=undercat --cov-config pyproject.toml"
